# CavalierContours

./: .gitignore  CMakeLists.txt  Changelog.md  PERF_COMPARE_CPP_RUST_2026-04-17.md  README.md
c_api_include/: cavaliercontours.h
cmake/: CavalierContoursConfig.cmake.in
examples/: basicpolylinefunctions.cpp  polylinecombine.cpp  polylineoffset.cpp  polylineoffsetislands.cpp  windingnumber.cpp
include/cavc/: intrcircle2circle2.hpp  intrlineseg2circle2.hpp  intrlineseg2lineseg2.hpp  mathutils.hpp  plinesegment.hpp  polyline.hpp  polylinecombine.hpp  polylineintersects.hpp  polylineoffset.hpp  polylineoffsetislands.hpp  staticspatialindex.hpp  vector.hpp  vector2.hpp
include/cavc/internal/: common.hpp  diagnostics.hpp  plinesliceview.hpp
src/: cavaliercontours.cpp
tests/: CMakeLists.txt
tests/benchmarks/: CMakeLists.txt  areabenchmarks.cpp  benchmarkprofiles.h  clipperbenchmarks.cpp  combinebenchmarks.cpp  extentsbenchmarks.cpp  offsetbenchmarks.cpp  offsethardeningbenchmarks.cpp  offsetislandsbenchmarks.cpp  pathlengthbenchmarks.cpp  spatialindexbenchmarks.cpp  windingnumberbenchmarks.cpp
tests/polylinefactory/include/: polylinefactory.hpp
tests/polylinefactory/src/: polylinefactory.cpp
tests/testhelpers/: CMakeLists.txt
tests/testhelpers/include/: casebuilder.hpp  polylinefactory.hpp  testhelpers.hpp
tests/testhelpers/src/: casebuilder.cpp  polylinefactory.cpp
tests/tests/: CMakeLists.txt  Coverage.cmake  TEST_capi_combine_plines.cpp  TEST_capi_parallel_offset.cpp  TEST_capi_pline.cpp  TEST_cavc_api_regression.cpp  TEST_cavc_combine_plines.cpp  TEST_cavc_internal_slice_view.cpp  TEST_cavc_offset_islands.cpp  TEST_cavc_parallel_offset.cpp  TEST_cavc_parallel_offset_fuzz_regression.cpp  TEST_cavc_pline.cpp  TEST_cavc_pline_function.cpp  TEST_intrcircle2circle2.cpp  TEST_intrlineseg2circle2.cpp  TEST_intrlineseg2lineseg2.cpp  TEST_pline.cpp  TEST_plinesegment.cpp  TEST_sample.cpp  TEST_staticspatialindex.cpp  c_api_test_helpers.hpp  shape_offset_self_intersect_case.hpp  testhelpers.hpp
